--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,71 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SensoryApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.SensoryApp" parent="Base.Theme.SensoryApp" />
+    <style name="blackButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/btn_black_bg_selector</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">6pt</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="whiteButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/btn_white_bg_selector</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">6pt</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="heading1" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">12pt</item>
+    </style>
+
+    <style name="heading2" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">12pt</item>
+    </style>
+
+    <style name="subtitle1" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">10pt</item>
+    </style>
+
+    <style name="body1" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">8pt</item>
+    </style>
+
+    <style name="orangeLabel">
+        <item name="android:background">@drawable/label_orange_bg</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
+    <style name="lightGrayLabel">
+        <item name="android:background">@drawable/label_gray_bg</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
+    <style name="appBar">
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="editButton">
+        <item name="android:padding">8dp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="iconTint">@color/black</item>
+        <item name="iconSize">35dp</item>
+    </style>
+
+    <style name="Theme.SensoryApp" parent="Base.Theme.SensoryApp">
+    </style>
 </resources>
