Bluetooth scanning for detectable phones, smart watches, earphones, and headphones - devices that can represent unique people

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- RecyclerView to display list of Bluetooth devices -->
+    <TextView
+        android:id="@+id/uniquePhoneCountText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Unique Phones: 0"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.543" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
