--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:id="@+id/uniquePhoneCountText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Unique Phones: 0"
+        android:text="Unique Phones, Smartwatches, earphones: 0"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
